[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/sights.png" type="Texture" id=2]
[ext_resource path="res://Sounds/gunshot.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/rifle.glb" type="PackedScene" id=5]

[sub_resource type="CapsuleShape" id=1]
height = 4.0

[sub_resource type="CapsuleMesh" id=2]
mid_height = 4.0

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 20
sprint_speed = 30
acceleration = 8
jump_power = 40

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.54353, 0 )

[node name="Camera" type="Camera" parent="Head"]
current = true
fov = 90.0
size = 0.13
far = 1000.0

[node name="CanvasLayer" type="CanvasLayer" parent="Head/Camera"]

[node name="Control" type="Control" parent="Head/Camera/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Head/Camera/CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="Head/Camera/CanvasLayer/Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -10.0
margin_right = 32.0
margin_bottom = 10.0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1000 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Gun" parent="." instance=ExtResource( 5 )]
transform = Transform( -6.51683e-07, 0, 4, 0, 4, 0, -4, 0, -6.51683e-07, 0.930338, 0.26546, -1.52482 )

[node name="Muzzle" type="Spatial" parent="Gun"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 1.37383, 0, 2.38419e-07 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="GunShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -13.287
pitch_scale = 0.8

[node name="PlayerBody" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null
[connection signal="pressed" from="Head/Camera/CanvasLayer/Control/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
